--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,6 @@ jobs:
           if git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep -qvE '\.py$'; then
             echo "Error: Non-Python files found in commit."
             exit 1
+          else
+            echo "All files are Python files."
           fi
