--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
+name: Check Python Files Only
 
+on:
+  push:
+    branches:
+      - main
+      - develop
+
+jobs:
+  check_files:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Check for non-Python files
+        run: |
+          if [[ $GITHUB_PATH != *"main.yml"* && $(git show --name-only --pretty=format: ${{ github.sha }}) =~ \.py$ ]]; then
+            echo "Error: Non-Python files found in commit."
+            exit 1
+          else
+            echo "All files are Python files or it's main.yml."
+          fi
