--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Check Python Files Only - verification
+name: Check Python and YAML Files Only
 
 on:
   push:
@@ -13,11 +13,11 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Check for non-Python files
+      - name: Check for non-Python or non-YAML files
         run: |
-          if [[ $GITHUB_PATH != *"main.yml"* && $(git show --name-only --pretty=format: ${{ github.sha }}) =~ \.py$ ]]; then
-            echo "Error: Non-Python files found in commit."
+          if git show --name-only --pretty=format: ${{ github.sha }} | grep -qvE '\.py$|\.yml$'; then
+            echo "Error: Non-Python or Non-YAML files found in commit."
             exit 1
           else
-            echo "All files are Python files or it's main.yml."
+            echo "All files are Python or YAML files."
           fi
